--- a/package.json
+++ b/package.json
@@ -3,19 +3,31 @@
   "version": "0.0.1",
   "description": "基于H5的纯前端自习辅助工具集",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx webpack",
+    "start":"webpack serve --open"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/BovineBeta/SelfStudyKit.git"
   },
-  "author": "",
-  "license": "MIT",
+  "author": "FBIK.",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/BovineBeta/SelfStudyKit/issues"
   },
   "homepage": "https://github.com/BovineBeta/SelfStudyKit#readme",
   "dependencies": {
     "mdui": "^1.0.2"
+  },
+  "devDependencies": {
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.8.1",
+    "html-minifier": "^4.0.0",
+    "style-loader": "^3.3.3",
+    "terser-webpack-plugin": "^5.3.9",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.15.1"
   }
 }
