fix: 完善.vscode settings.json fix: 一处错误的注释方法

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "liveServer.settings.root": "./dist"
+    "liveServer.settings.root": "./dist",
+    "prettier.enable": true,
+    "editor.formatOnSave": true
 }
