--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx webpack",
     "build-watch": "npx webpack --watch",
+    "build-production": "npx webpack --mode=production",
     "start": "webpack serve --open"
   },
   "repository": {
