--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,30 @@
 {
     "liveServer.settings.root": "./dist",
     "prettier.enable": true,
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "[html]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[css]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[json]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+
+    "[jsonc]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[markdown]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+
+    "[javascript]": {
+        "editor.rulers": [120],
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[typescript]": {
+        "editor.rulers": [120],
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    }
 }
