--- a/package.json
+++ b/package.json
@@ -23,11 +23,9 @@
     "mdui": "^1.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.9",
-    "@babel/preset-env": "^7.22.9",
-    "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
+    "esbuild-loader": "^3.1.0",
     "html-minifier": "^4.0.0",
     "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.9",
