--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,6 @@
         "package.json": "package-lock.json,yarn.lock,.gitignore,.prettierignore,.prettierrc.js,LICENSE,tsconfig.json"
     },
     "files.exclude": {
-        ".idea": true,
+        ".idea": true
     }
 }
