--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript-cookie": "^1.0.6"
   },
   "devDependencies": {
+    "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "esbuild-loader": "^3.1.0",
