--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "selfstudykit",
-  "version": "0.0.1",
   "description": "基于H5的纯前端自习辅助工具集",
   "scripts": {
     "build": "npx webpack",
@@ -8,6 +7,7 @@
     "build-production": "npx webpack --mode=production",
     "start": "webpack serve --open"
   },
+  "packageManager": "yarn@1.22.19",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/BovineBeta/SelfStudyKit.git"
