--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "npx webpack",
     "build-watch": "npx webpack --watch",
     "build-production": "npx webpack --mode=production",
-    "start": "webpack serve --open"
+    "start": "webpack serve"
   },
   "packageManager": "yarn@1.22.19",
   "repository": {
