--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,8 @@ dist
 .idea
 package-lock.json
 SDK
-desktop/build
+
+desktop/build/*.asar
+desktop/build/*.exe
+desktop/build/*.zip
+desktop/build/asar/
