--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.8.1",
         "esbuild-loader": "^3.1.0",
-        "html-minifier": "^4.0.0",
+        "html-webpack-plugin": "^5.5.3",
         "style-loader": "^3.3.3",
         "terser-webpack-plugin": "^5.3.9",
         "ts-loader": "^9.4.4",
