--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "description": "基于 MDUI 的纯前端自习辅助工具集",
     "scripts": {
         "build": "npx webpack",
+        "dev": "npx webpack --watch",
+        "production": "npx webpack --mode=production",
         "build-watch": "npx webpack --watch",
         "build-production": "npx webpack --mode=production",
         "start": "webpack serve",
