build(mdui): 纠正mdui版本号
mdui 2 遵循Material Design 3, 本项目使用mdui 1(我记得是Material Design 2)

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     },
     "homepage": "https://github.com/FBIKdot/SelfStudyKit#readme",
     "dependencies": {
-        "mdui": "^1.0.2",
+        "mdui": "1.0.2",
         "typescript-cookie": "^1.0.6"
     },
     "devDependencies": {
