--- a/.github/workflows/autoPrettier.yml
+++ b/.github/workflows/autoPrettier.yml
@@ -19,13 +19,13 @@ jobs:
             - name: Set up Node.js
               uses: actions/setup-node@v2
               with:
-                  node-version: '14'
+                  node-version: '18'
 
             - name: Install dependencies
-              run: npm install
+              run: npm install -g prettier
 
             - name: Run Prettier
-              run: npx prettier --write .
+              run: prettier --write .
 
             - name: Check for changes
               id: git-diff
