--- a/.github/workflows/autoPrettier.yml
+++ b/.github/workflows/autoPrettier.yml
@@ -30,12 +30,7 @@ jobs:
             - name: Check for changes
               id: git-diff
               run: |
-                  git diff --quiet
-                  if [ $? -eq 1 ]; then
-                    echo "changed=true" >> $GITHUB_OUTPUT
-                  else
-                    echo "changed=false" >> $GITHUB_OUTPUT
-                  fi
+                  git diff --quiet || echo "changed=true" >> $GITHUB_ENV
 
             - name: Configure Git
               if: steps.git-diff.outputs.changed == 'true'
