fix(autoPrettier): 错误的output结果

--- a/.github/workflows/autoPrettier.yml
+++ b/.github/workflows/autoPrettier.yml
@@ -30,7 +30,7 @@ jobs:
             - name: Check for changes
               id: git-diff
               run: |
-                  git diff --quiet || echo "changed=true" >> $GITHUB_ENV
+                  git diff --quiet || echo "changed=true" >> $GITHUB_OUTPUT
 
             - name: IsChange
               run: |
