--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "selfstudykit",
     "description": "基于 MDUI 的纯前端自习辅助工具集",
+    "version": "v1.1.0",
     "type": "module",
     "scripts": {
         "dev": "vite",
