fix: prettier使用低版本2.8.8以防止DOCTYPE格式化为小写
vscode 使用prettier格式化后doctype会变成大写, 而在终端使用prettier --write是小写. 好奇怪

--- a/.github/workflows/autoPrettier.yml
+++ b/.github/workflows/autoPrettier.yml
@@ -22,7 +22,7 @@ jobs:
                   node-version: '18'
 
             - name: Install dependencies
-              run: npm install -g prettier
+              run: npm install -g prettier@2.8.8
 
             - name: change core.autocrlf to input
               run: git config --global core.autocrlf input
