--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
         "build": "vite build",
         "preview": "vite preview",
         "build-production": "vite build",
-        "wp:dev": "npx webpack --watch",
-        "wp:serve": "npx webpack serve",
-        "wp:build": "npx webpack --mode=production",
-        "me:build": "npx webpack --mode=production && .\\SDK\\mini_electron\\mini_electron.exe electron.js",
+        "wp:dev": "npx rspack --watch",
+        "wp:serve": "npx rspack serve",
+        "wp:build": "npx rspack --mode=production",
+        "me:build": "npx rspack --mode=production && .\\SDK\\mini_electron\\mini_electron.exe electron.js",
         "me:preview": ".\\SDK\\mini_electron\\mini_electron.exe electron.js"
     },
     "packageManager": "pnpm@8.10.5",
@@ -30,22 +30,21 @@
         "typescript-cookie": "^1.0.6"
     },
     "devDependencies": {
+        "@rspack/cli": "^1.2.2",
+        "@rspack/core": "^1.2.2",
         "typescript": "^5.1.6",
         "vite": "^5.0.0",
         "vite-plugin-html": "^3.2.0"
     },
     "optionalDependencies": {
         "compression-webpack-plugin": "^10.0.0",
-        "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.8.1",
         "esbuild-loader": "^3.1.0",
         "html-webpack-plugin": "^5.5.3",
         "purgecss-webpack-plugin": "^5.0.0",
         "style-loader": "^3.3.3",
         "terser-webpack-plugin": "^5.3.9",
-        "ts-loader": "^9.4.4",
-        "webpack": "^5.74.0",
-        "webpack-cli": "^4.10.0",
-        "webpack-dev-server": "^4.15.1"
+        "ts-loader": "^9.4.4"
     }
 }
+
